# glowing-telegram

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.rust  NOTES.md  PYTHON_TESTING.md  README.md  TODO.md  biome.json  build.sh  docker-bake.hcl  docker-bake.override.hcl  docker-compose.yaml  nginx.conf  package-lock.json  plans.md  pyproject.toml  run_integration_tests.sh  rustfmt.toml  test_python_modules.py
ai_api/: .dockerignore  Cargo.toml  Dockerfile  run.ps1
ai_api/migrations/2023-11-13-012017_initial_tables/: up.sql
ai_api/src/: main.rs  models.rs  schema.rs  state.rs
ai_api/src/handlers/: complete_chat.rs  health.rs  mod.rs
ai_chat_lambda/: Cargo.toml  Dockerfile
ai_chat_lambda/src/: main.rs
api/: Cargo.toml
api/migrations/2023-11-26-170549_create_streams/: down.sql  up.sql
api/migrations/2023-11-26-222214_create_video_clips/: down.sql
api/migrations/2023-11-30-180204_add_metadata_to_video_clips/: down.sql
api/migrations/2024-02-11-182318_add_silence_dectection_info_to_stream/: up.sql
api/migrations/2024-03-10-183102_create_episodes/: down.sql  up.sql
api/migrations/2024-03-17-181139_add_series_and_order_to_episodes/: up.sql
api/migrations/2024-03-29-012805_add_stream_fields_for_import/: down.sql  up.sql
api/migrations/2024-03-31-155300_add_render_uri_to_episodes/: down.sql  up.sql
api/migrations/2024-04-28-213931_add_episode_is_published/: down.sql
api/migrations/2024-05-12-161510_add_playlist_id_to_series/: down.sql  up.sql
api/migrations/2024-05-19-170130_add_series_id_to_stream/: down.sql
api/migrations/2024-08-11-154802_add_youtube_video_id_to_episodes/: down.sql  up.sql
api/src/: config.rs  db.rs  ffprobe.rs  main.rs  models.rs  oauth.rs  schema.rs  state.rs  structs.rs  task.rs
api/src/handlers/: chat.rs  macros.rs  mod.rs  silence_detection.rs  stream_ingestion.rs  tasks.rs  transcription.rs  twitch.rs  utils.rs  youtube.rs
api/src/handlers/episode/: create.rs  create_bulk.rs  delete.rs  get_list.rs  get_one.rs  structs.rs  update.rs
api/src/handlers/series/: create.rs  delete.rs  get_list.rs  get_one.rs  structs.rs  update.rs
api/src/handlers/stream/: create.rs  create_bulk.rs  delete.rs  get_list.rs  get_one.rs  structs.rs  update.rs
api/src/handlers/topics/: create.rs  get_list.rs  structs.rs
api/src/handlers/video_clip/: create.rs  delete.rs  get_list.rs  get_one.rs  mod.rs  structs.rs  update.rs
api/src/oauth/: mod.rs  twitch.rs  youtube.rs
audio_transcriber/: Cargo.toml  Dockerfile  MIGRATION_GUIDE.md  Pipfile  download_model.py  run_integration_tests.sh  test_download_model.py  whisper_hf.py
audio_transcriber/src/: dynamodb.rs  main.rs  whisper.rs
audio_transcriber/tests/: README.md  integration_test.rs  mod.rs  test_config.rs
audio_transcriber/tests/fixtures/: README.md
chat_processor_lambda/: Cargo.toml
chat_processor_lambda/src/: main.rs
common_api/: Cargo.toml
common_api/src/: lib.rs
common_api_lib/: Cargo.toml
common_api_lib/src/: db.rs  lib.rs  media.rs  serde.rs  task.rs
crud_api/: Cargo.toml  Dockerfile
crud_api/migrations/2023-11-26-222214_create_video_clips/: up.sql
crud_api/migrations/2023-11-30-180204_add_metadata_to_video_clips/: up.sql
crud_api/migrations/2024-01-14-170726_add_transcription_task_url_to_stream/: down.sql  up.sql
crud_api/migrations/2024-02-11-182318_add_silence_dectection_info_to_stream/: down.sql
crud_api/migrations/2024-03-17-181139_add_series_and_order_to_episodes/: down.sql
crud_api/migrations/2024-04-28-213931_add_episode_is_published/: up.sql
crud_api/migrations/2024-05-19-170130_add_series_id_to_stream/: up.sql
crud_api/migrations/2024-06-02-151631_add_metadata_to_series_and_episodes/: down.sql  up.sql
crud_api/src/: dynamodb.rs  main.rs  models.rs  schema.rs  state.rs  utils.rs
crud_api/src/handlers/: create.rs  delete.rs  get_list.rs  get_one.rs  macros.rs  mod.rs  structs.rs  update.rs  utils.rs
crud_api/src/handlers/episode/: create.rs  (+7 more)
embedding_service/: Cargo.toml  README.md
embedding_service/src/: main.rs
embedding_service/tests/: Dockerfile.test  README.md  docker-compose.test.yml  integration_test.rs  mod.rs  run_integration_tests.sh  test_config.rs
figment_aws_provider/: Cargo.toml
figment_aws_provider/src/: lib.rs
gt_app/: Cargo.toml
gt_app/src/: lib.rs
gt_axum/: Cargo.toml
gt_axum/src/: cognito.rs  lib.rs
gt_ffmpeg/: Cargo.toml
gt_ffmpeg/src/: audio_extraction.rs  edit.rs  ffprobe.rs  keyframes_extraction.rs  lib.rs  serde.rs  silence_detection.rs  transcode.rs
gt_secrets/: Cargo.toml
gt_secrets/src/: lib.rs
ingestion_management_lambda/: Cargo.toml  storage_cost_config.json  storage_cost_config.schema.json
ingestion_management_lambda/src/: config.rs  main.rs  s3_status.rs
render_job/: Cargo.toml  Dockerfile
render_job/src/: job_utils.rs  main.rs
silence_detection_api/: Cargo.toml  README.md
silence_detection_api/src/: main.rs
stream_ingestion_api/: Cargo.toml  README.md
stream_ingestion_api/src/: ffprobe.rs  main.rs
summarize_transcription/: Cargo.toml  Dockerfile
summarize_transcription/src/: main.rs  response_json_schema.json
task_worker/: Cargo.toml
task_worker/src/: lib.rs  main.rs
test_api/: Cargo.toml  Dockerfile
test_api/migrations/2023-11-13-012017_initial_tables/: down.sql
test_api/src/: db.rs  main.rs  schema.rs  state.rs
test_api/src/handlers/: complete_chat.rs  health.rs  mod.rs
twitch_lambda/: Cargo.toml  Dockerfile
twitch_lambda/src/: global_refresh.rs  handlers.rs  main.rs  secret.rs  structs.rs  twitch.rs
types/: Cargo.toml  import.sh  package-lock.json  package.json
types/src/: lib.rs  types.rs  types.ts  utils.rs
upload_video/: Cargo.toml  Dockerfile
upload_video/src/: main.rs  youtube.rs
video_ingestor/: Cargo.toml  Dockerfile
video_ingestor/src/: main.rs
widget_updater_lambda/: Cargo.toml
widget_updater_lambda/src/: main.rs
widget_updater_lambda/src/updaters/: ad_timer.rs  countdown.rs  mod.rs
youtube_lambda/: Cargo.toml  Dockerfile
youtube_lambda/src/: handlers.rs  main.rs  structs.rs  youtube.rs
(+356 files in other folders)
