[workspace]
repository = "https://github.com/saebyn/glowing-telegram"
license = "AGPL-3.0"
resolver = "2"

members = [
  "api",
  "gt_ffmpeg",
  "task_worker",
  "video_ingestor",
  "audio_transcriber",
]

[workspace.lints.clippy]
# Lint groups
# These have a priority of -1 to ensure that individual
# Lints override them, if present.
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
style = { level = "warn", priority = -1 }
