[workspace]
resolver = "2"

members = [
  "gt_ffmpeg",
  "video_ingestor",
  "audio_transcriber",
  "summarize_transcription",
  "crud_api",
  "ai_chat_lambda",
  "types",
  "twitch_lambda",
]

[profile.release]
strip = true

[workspace.lints.clippy]
# Lint groups
# These have a priority of -1 to ensure that individual
# Lints override them, if present.
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
style = { level = "warn", priority = -1 }
