[package]
name = "ai_chat_lambda"
version = "0.1.0"
edition = "2021"
authors = ["saebyn <saebynx@gmail.com>"]
description = "AI Chat Lambda"
repository = "https://github.com/saebyn/glowing-telegram"
license = "AGPL-3.0"
readme = "../README.md"
keywords = ["rust", "aws", "lambda", "chat", "ai", "glowing-telegram"]
categories = ["web-programming"]

[dependencies]
aws-config = "1.5.5"
aws-sdk-secretsmanager = "1.53.0"
openai_dive = "0.7.1"
lambda_runtime = "0.13.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.40.0", features = ["full"] }
figment = { version = "0.10.19", features = ["env"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
types = { path = "../types" }

[lints]
workspace = true
