[package]
name = "ai_chat_lambda"
version = "0.1.0"
edition = "2021"
authors = ["saebyn <saebynx@gmail.com>"]
description = "AI Chat Lambda"
repository = "https://github.com/saebyn/glowing-telegram"
license = "AGPL-3.0"
readme = "../README.md"
keywords = ["rust", "aws", "lambda", "chat", "ai", "glowing-telegram"]
categories = ["web-programming"]

[dependencies]
aws-config = { workspace = true }
aws-sdk-secretsmanager = "1.53.0"
openai_dive = { workspace = true }
lambda_runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
figment = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
types = { workspace = true }

[lints]
workspace = true
