[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
tokio = { version = "1.39", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.124"
tracing = { version = "0.1.40" }
diesel = { version = "2.2.3", features = [
  "chrono",
  "uuid",
  "postgres_backend",
  "serde_json",
] }
diesel-async = { version = "0.5.0", features = ["postgres", "bb8"] }
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.10.0", features = ["serde"] }
iso8601 = { version = "0.6.1", features = ["serde", "chrono"] }
redact = { version = "0.1.9", features = ["serde"] }
dotenvy = "0.15.7"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-http = { version = "0.6.1", features = [
  "cors",
  "trace",
  "compression-full",
  "sensitive-headers",
  "request-id",
  "propagate-header",
] }
openai_dive = "0.6.4"
bb8 = "0.8"
reqwest = { version = "0.12.4", features = [
  "json",
  "rustls-tls",
  "trust-dns",
  "gzip",
  "stream",
], default-features = false }
regex = "1.10.6"
redis = { version = "0.27.4", features = ["aio", "json", "tokio-comp"] }
task_worker = { path = "../task_worker" }
tempfile = "3.11.0"
url = "2.5.2"
validator = { version = "0.18", features = ["derive"] }
figment = { version = "0.10.19", features = ["toml", "env"] }
figment_file_provider_adapter = "0.1.1"
oauth2 = { version = "4.0.0", features = ["reqwest", "rustls-tls"] }
