[package]
name = "audio_transcriber"
description = "Audio Transcriber for the Glowing Telegram project"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-sdk-dynamodb = "1.54.0"
aws-sdk-s3 = "1.57.0"
aws-config = { version = "1.5.10", features = ["behavior-version-latest"] }
tokio = { version = "1", features = ["full"] }
figment = { version = "0.10.19", features = ["env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tempfile = "3"

[lints]
workspace = true
