[package]
name = "audio_transcriber"
description = "Audio Transcriber for the Glowing Telegram project"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-sdk-dynamodb = "1.45.0"
aws-sdk-s3 = "1.49.0"
aws-config = { version = "1.5.5", features = ["behavior-version-latest"] }
tokio = { version = "1", features = ["full"] }
figment = { version = "0.10.19", features = ["env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.124"
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tempfile = "3"
types = { path = "../types" }

[lints]
workspace = true
