[package]
name = "audio_transcriber"
description = "Audio Transcriber for the Glowing Telegram project"
version = "0.1.0"
edition = "2021"
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords = ["rust", "glowing-telegram", "audio", "transcriber"]
categories = ["web-programming"]

[dependencies]
aws-sdk-dynamodb = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }
tokio = { workspace = true }
figment = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = "3"
types = { workspace = true }
thiserror = "2.0.17"

[dev-dependencies]
testcontainers = "0.24.0"
testcontainers-modules = { version = "0.12.1", features = ["localstack"] }
tokio-test = "0.4.5"
chrono = { version = "0.4", features = ["serde"] }

[lints]
workspace = true
