[package]
name = "chat_processor_lambda"
version = "0.1.0"
edition = "2021"
description = "Chat Processor Lambda for the Glowing Telegram project"
keywords = ["rust", "aws", "lambda", "chat", "twitch", "glowing-telegram"]
categories = ["web-programming"]
authors.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
aws_lambda_events = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
lambda_runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
types = { workspace = true }
chrono = { workspace = true }
gt_app = { path = "../gt_app" }

[lints]
workspace = true