[package]
name = "common_api"
description = "Common API elements for the glowing-telegraph microservices"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.4.4", features = [
  "cors",
  "trace",
  "compression-full",
  "sensitive-headers",
  "request-id",
  "propagate-header",
] }
dotenvy = "0.15"
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
