[package]
name = "crud_api"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.10"
aws-sdk-dynamodb = { version = "1.55.0" }
lambda_runtime = "0.13.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.42.0", features = ["full"] }
figment = { version = "0.10.19", features = ["env"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
aws_lambda_events = "0.16.0"
chrono = "0.4.39"
axum-aws-lambda = "0.9.0"
axum = "0.8"
lambda_http = "0.14"
tower-http = { version = "0.6.2", features = [
  "cors",
  "compression-gzip",
  "compression-deflate",
  "trace",
] }
uuid = { version = "1.11.0", features = ["v7", "fast-rng"] }

[lints]
workspace = true
