[package]
name = "crud_api"
version = "0.1.0"
edition = "2021"
authors = ["saebyn <saebynx@gmail.com>"]
repository = "https://github.com/saebyn/glowing-telegram"
license = "AGPL-3.0"
readme = "../README.md"
description = "CRUD API for the Glowing Telegram project"
keywords = ["rust", "glowing-telegram", "crud", "api"]
categories = ["web-programming"]

[dependencies]
aws-config = "1.5.5"
aws-sdk-dynamodb = { version = "1.53.0" }
lambda_runtime = "0.13.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.40.0", features = ["full"] }
figment = { version = "0.10.19", features = ["env"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
aws_lambda_events = "0.15.1"
chrono = "0.4.39"
axum-aws-lambda = "0.9.0"
axum = "0.7"
lambda_http = "0.13"
tower-http = { version = "0.5.0", features = [
  "cors",
  "compression-gzip",
  "compression-deflate",
  "trace",
] }
uuid = { version = "1.11.0", features = ["v7", "fast-rng"] }

[lints]
workspace = true
