[package]
name = "crud_api"
version = "0.1.0"
edition = "2021"
authors = ["saebyn <saebynx@gmail.com>"]
repository = "https://github.com/saebyn/glowing-telegram"
license = "AGPL-3.0"
readme = "../README.md"
description = "CRUD API for the Glowing Telegram project"
keywords = ["rust", "glowing-telegram", "crud", "api"]
categories = ["web-programming"]

[dependencies]
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
lambda_runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
figment = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
aws_lambda_events = { workspace = true }
axum-aws-lambda = { workspace = true }
axum = { workspace = true }
lambda_http = { workspace = true }
tower-http = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
openai_dive = { workspace = true }

[lints]
workspace = true
