[package]
name = "embedding_service"
version = "0.1.0"
edition = "2024"
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
types = { workspace = true }
gt_app = { workspace = true }
gt_secrets = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-secretsmanager = { workspace = true }
serde_dynamo = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-postgres = "0.7"
figment = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
openai_dive = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true