[package]
name = "gt_axum"
version = "0.1.0"
edition = "2021"
description = "Axum helpers for the Glowing Telegram project"
keywords = ["rust", "glowing-telegram", "axum"]
categories = ["web-programming"]
authors.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
lambda_runtime = { workspace = true }
lambda_http = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
axum-aws-lambda = { workspace = true }
aws_lambda_events = { workspace = true }

[lints]
workspace = true
