[package]
name = "gt_ffmpeg"
description = "FFmpeg wrapper for the Glowing Telegram project"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
tracing = { version = "0.1.41" }
tempfile = "3"
chrono = { version = "0.4.39", features = ["serde"] }
iso8601 = { version = "0.6.1", features = ["serde", "chrono"] }
regex = "1.11.1"
