[package]
name = "gt_ffmpeg"
description = "FFmpeg wrapper for the Glowing Telegram project"
version = "0.1.0"
edition = "2021"
authors = ["saebyn <saebynx@gmail.com>"]
repository = "https://github.com/saebyn/glowing-telegram"
license = "AGPL-3.0"
readme = "../README.md"
keywords = ["rust", "ffmpeg", "glowing-telegram"]
categories = ["web-programming"]

[dependencies]
tokio = { version = "1.39", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.124"
tracing = { version = "0.1.40" }
tempfile = "3"
chrono = { version = "0.4.38", features = ["serde"] }
iso8601 = { version = "0.6.1", features = ["serde", "chrono"] }
regex = "1.10.6"
