[package]
name = "gt_ffmpeg"
description = "FFmpeg wrapper for the Glowing Telegram project"
version = "0.1.0"
edition = "2021"
authors = ["saebyn <saebynx@gmail.com>"]
repository = "https://github.com/saebyn/glowing-telegram"
license = "AGPL-3.0"
readme = "../README.md"
keywords = ["rust", "ffmpeg", "glowing-telegram"]
categories = ["web-programming"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tempfile = "3"
chrono = { workspace = true }
iso8601 = { version = "0.6.3", features = ["serde", "chrono"] }
regex = "1.12.2"
types = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
