[package]
name = "render_job"
description = "Render job for the Glowing Telegram project"
version = "0.1.0"
edition = "2021"
authors = ["saebyn <saebynx@gmail.com>"]
repository = "https://github.com/saebyn/glowing-telegram"
license = "AGPL-3.0"
readme = "../README.md"
keywords = ["rust", "ffmpeg", "glowing-telegram"]
categories = ["web-programming"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tempfile = "3"
chrono = { workspace = true }
types = { workspace = true }
