
[package]
name = "silence_detection_api"
version = "0.1.0"
edition = "2021"

[dependencies]
common_api_lib = { path = "../common_api_lib" }
dotenvy = { version = "0.15.7" }
axum = "0.7.5"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
iso8601 = { version = "0.6.1", features = ["serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
tracing = { version = "0.1.40" }
regex = "1.10.2"
reqwest = { version = "0.12.2", features = [
  "json",
  "rustls-tls",
  "trust-dns",
  "gzip",
], default-features = false }
