[package]
name = "summarize_transcription"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.10"
aws-sdk-dynamodb = "1.55.0"
aws-sdk-secretsmanager = "1.54.0"
serde_dynamo = "4.2.14"
openai_dive = "0.7.1"
lambda_runtime = "0.13.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
figment = { version = "0.10.19", features = ["env"] }

[lints]
workspace = true
