[package]
name = "summarize_transcription"
version = "0.1.0"
edition = "2021"
description = "Summarize Transcription for the Glowing Telegram project"
authors = ["saebyn <saebynx@gmail.com>"]
repository = "https://github.com/saebyn/glowing-telegram"
license = "AGPL-3.0"
readme = "../README.md"
keywords = ["rust", "glowing-telegram", "summarize", "transcription"]
categories = ["web-programming"]

[dependencies]
aws-config = "1.5.5"
aws-sdk-dynamodb = "1.53.0"
aws-sdk-secretsmanager = "1.53.0"
serde_dynamo = "4.2.14"
openai_dive = "0.6.6"
lambda_runtime = "0.13.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.40.0", features = ["full"] }
figment = { version = "0.10.19", features = ["env"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[lints]
workspace = true
