[package]
name = "summarize_transcription"
version = "0.1.0"
edition = "2021"
description = "Summarize Transcription for the Glowing Telegram project"
authors = ["saebyn <saebynx@gmail.com>"]
repository = "https://github.com/saebyn/glowing-telegram"
license = "AGPL-3.0"
readme = "../README.md"
keywords = ["rust", "glowing-telegram", "summarize", "transcription"]
categories = ["web-programming"]

[dependencies]
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-secretsmanager = { workspace = true }
serde_dynamo = { workspace = true }
openai_dive = { workspace = true }
lambda_runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
figment = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
