
[package]
name = "task_worker"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = { version = "0.15.7" }
tokio = { version = "1.0", features = ["full"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
redis = { version = "0.25.3", features = ["aio", "json", "tokio-comp"] }
reqwest = { version = "0.11.22", features = ["json", "rustls-tls"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
chrono = { version = "0.4.37", features = ["serde"] }
