
[package]
name = "task_worker"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = { version = "0.15.7" }
tokio = { version = "1.40", features = ["full"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
redis = { version = "0.26.1", features = ["aio", "json", "tokio-comp"] }
reqwest = { version = "0.12.7", features = ["json", "rustls-tls"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
chrono = { version = "0.4.37", features = ["serde"] }
