[package]
name = "twitch_lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.5"
aws-sdk-secretsmanager = { version = "1.53.0" }
lambda_runtime = "0.13.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.40.0", features = ["full"] }
figment = { version = "0.10.19", features = ["env"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
aws_lambda_events = "0.15.1"
chrono = "0.4.39"
axum-aws-lambda = "0.9.0"
axum = "0.7"
lambda_http = { version = "0.13", features = ["apigw_http"] }
tower-http = { version = "0.5.0", features = [
  "compression-gzip",
  "compression-deflate",
  "trace",
] }
uuid = { version = "1.11.0", features = ["v7", "fast-rng"] }
types = { path = "../types" }
reqwest = { version = "0.12.4" }
redact = { version = "0.1.9", features = ["serde"] }
oauth2 = { version = "4.0.0", features = ["reqwest", "rustls-tls"] }

[lints]
workspace = true
