[package]
name = "upload_video"
version = "0.1.0"
edition = "2024"
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
aws-sdk-s3 = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-secretsmanager = { workspace = true }
aws-config = { workspace = true }
tokio = { workspace = true }
figment = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
redact = { workspace = true }
oauth2 = { version = "4", features = ["reqwest", "rustls-tls"] }
gt_secrets = { workspace = true }
tempfile = "3"

[lints]
workspace = true
