[package]
name = "video_ingestor"
license = "AGPL-3.0"
description = "Video Ingestor for the Glowing Telegram project"
version = "0.1.0"
edition = "2021"
authors = ["saebyn <saebynx@gmail.com>"]
repository = "https://github.com/saebyn/glowing-telegram"
readme = "../README.md"
keywords = ["rust", "glowing-telegram", "video", "ingestor"]
categories = ["web-programming"]

[dependencies]
gt_ffmpeg = { path = "../gt_ffmpeg" }
aws-sdk-s3 = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-config = { workspace = true }
tokio = { workspace = true }
figment = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = "3"

[lints]
workspace = true
