[package]
name = "widget_updater_lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
chrono = { workspace = true }
gt_app = { workspace = true }
lambda_runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
types = { workspace = true }
