[package]
name = "youtube_lambda"
version = "0.1.0"
edition = "2021"
description = "YouTube Lambda for the Glowing Telegram project"
keywords = ["rust", "aws", "lambda", "youtube", "glowing-telegram"]
categories = ["web-programming"]
authors.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
aws_lambda_events = { workspace = true }
aws-config = { workspace = true }
aws-sdk-secretsmanager = { workspace = true }
axum = { workspace = true }
axum-aws-lambda = { workspace = true }
chrono = { workspace = true }
gt_axum = { workspace = true }
gt_secrets = { workspace = true }
lambda_http = { workspace = true }
lambda_runtime = { workspace = true }
oauth2 = { version = "4", features = ["reqwest", "rustls-tls"] }
redact = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
types = { workspace = true }
uuid = { workspace = true }
gt_app = { path = "../gt_app" }

[lints]
workspace = true
